--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-<h1>hello world</h1>
-<p>boa tarde</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Site</title>
+  </head>
+  <body>
+    <h1>hello world 2</h1>
+    <p>boa tarde</p>
+  </body>
+</html>
