--- a/index.html
+++ b/index.html
@@ -2,9 +2,18 @@
 <html>
   <head>
     <title>Site</title>
+    <style>
+      body {
+        text-align: center;
+        background: black;
+      }
+
+      h1 {
+        color: green;
+      }
+    </style>
   </head>
   <body>
-    <h1>hello world 2</h1>
-    <p>boa tarde</p>
+    <h1>hello world</h1>
   </body>
 </html>
