--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
       body {
         text-align: center;
-        background: grey;
+        background: green;
       }
 
       h1 {
@@ -15,5 +15,6 @@
   </head>
   <body>
     <h1>hello world</h1>
+    <button>hello world</button>
   </body>
 </html>
