--- a/index.html
+++ b/index.html
@@ -3,8 +3,16 @@
   <head>
     <title>Site</title>
     <style>
+      *{
+          margin: 0;
+          padding: 0;
+          box-sizing: border-box;
+      }
       body {
-        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
         background: green;
       }
 
@@ -14,7 +22,6 @@
     </style>
   </head>
   <body>
-    <h1>hello world</h1>
     <button>hello world</button>
   </body>
 </html>
