--- a/index.html
+++ b/index.html
@@ -13,15 +13,21 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background: green;
+        background-color: #063618;
       }
 
       h1 {
         color: green;
       }
+      #btn{
+          margin: 5px;
+          background-color: rgb(15, 233, 15);
+          border: none;
+      }
+
     </style>
   </head>
   <body>
-    <button>hello world</button>
+    <button id="btn">hello world</button>
   </body>
 </html>
