--- a/index.html
+++ b/index.html
@@ -20,14 +20,20 @@
         color: green;
       }
       #btn{
-          margin: 5px;
-          background-color: rgb(15, 233, 15);
-          border: none;
+        margin: 5px;
+        background-color: rgb(11, 236, 11);
+        border: none;
+        padding: 15px 50px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 20px;
+        border-radius: 10px;
       }
 
     </style>
   </head>
   <body>
-    <button id="btn">hello world</button>
+    <button id="btn">Hello World</button>
   </body>
 </html>
